# custom-proto-builder

./: Cargo.toml  Makefile.toml  README.md  cliff.toml  deny.toml  spellcheck.toml
config/: config.yaml  cosmos.yaml  price.yaml  store.yaml
proto-build/: Cargo.toml
proto-build/src/: buf_build.rs  config.rs  functions.rs  git.rs  main.rs  mod_builder.rs  proto.rs
protos/price/price/: price.proto
protos/store/store/: store.proto
