[workspace]
members = ["proto-build", "packages/*"]
resolver = "2"

exclude = []

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.77.0"

[workspace.dependencies]
walkdir = "2.5.0"
git2 = "0.19.0"
tempfile = "3.10.1"
subtle-encoding = "0.5.1"
thiserror = "1.0.61"
config = "0.14.0"

# serde
serde = "1.0.203"
serde_derive = "1.0.203"
serde_yaml = "0.9.33"
serde_json = "1.0.117"
serde_qs = "0.13.0"
bytes = "1.6.0"

# proto
# prost-wkt = "0.5.1"
# prost-wkt-types = "0.5.1"
# prost-wkt-build = "0.5.1"


# Prost
prost = "0.12.6"
prost-derive = "0.12.6"
prost-types = "0.12.6"
prost-build = "0.12.6"

# Tonic
tonic-build = "0.11.0"
tonic = "0.11.0"

# Tokio
tokio = "1.38.0"

# Logging
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

# Error
flex-error = "0.4.4"

# format mod files
rust-format = "0.3.4"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
