[package]
name = "proto-compiler"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[dependencies]
walkdir = { workspace = true }

git2 = { workspace = true }
tempfile = { workspace = true }
subtle-encoding = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
thiserror = { workspace = true }

config = { workspace = true, features = ["yaml", "json"] }
# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rust-format = { workspace = true }

# Proto
prost = { workspace = true }
prost-build = { workspace = true }
prost-types = { workspace = true }
tonic-build = { workspace = true }

tokio = { workspace = true, features = [
    "net",
    "sync",
    "macros",
    "rt-multi-thread",
    "signal",
] }
